# gfxstream

./: BUILD.bazel  MODULE.bazel  build_variables.bzl  meson.build
.github/workflows/: postsubmit.yaml  presubmit_bazel.yml
codegen/renderControl/: renderControl.attrib
common/base/: SharedMemory_posix.cpp  SharedMemory_unittest.cpp  UdmabufCreator_linux.cpp
guest/egl/: egl.cpp
host/: BUILD.bazel  CMakeLists.txt  color_buffer.cpp  color_buffer.h  frame_buffer.cpp  frame_buffer.h  frame_buffer_unittest.cpp  platform_helper_qnx.cpp  post_worker.cpp  render_control.cpp  render_thread_info.cpp  renderer_impl.cpp  ring_stream.cpp  ring_stream.h  virtio_gpu_format_utils.h  virtio_gpu_frontend.cpp  virtio_gpu_frontend.h  virtio_gpu_gfxstream_renderer.cpp  virtio_gpu_pipe.cpp  virtio_gpu_resource.cpp
host/features/: BUILD.bazel  features.cpp  features_unittest.cpp
host/features/include/gfxstream/host/: features.h
host/gl/: color_buffer_gl.cpp  color_buffer_gl.h  emulation_gl.cpp  texture_draw.cpp  yuv_converter.cpp
host/renderControl_dec/: renderControl_dec.cpp  renderControl_server_proc.h
host/vulkan/: Android.bp  BUILD.bazel  color_buffer_vk.cpp  compositor_vk.cpp  compositor_vk.h  display_vk.cpp  display_vk.h  external_memory.cpp  post_worker_vk.cpp  vk_android_native_buffer_operations.cpp  vk_common_operations.cpp  vk_common_operations.h  vk_common_operations_tests.cpp  vk_decoder.cpp  vk_decoder_global_state.cpp  vk_decoder_global_state.h  vk_decoder_internal_structs.h  vk_decoder_snapshot.cpp  vk_decoder_snapshot.h  vk_decoder_snapshot_utils.cpp  vk_utils.cpp  (+10 more)
(+19 files in other folders)
