load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:build_variables.bzl", "GFXSTREAM_HOST_COPTS", "GFXSTREAM_HOST_DEFINES")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_host_features",
    srcs = ["features.cpp"],
    hdrs = glob(["include/**/*.h"]),
    copts = GFXSTREAM_HOST_COPTS,
    defines = GFXSTREAM_HOST_DEFINES,
    includes = ["include"],
    deps = [
        "//common/logging:gfxstream_common_logging",
        "//common/utils:gfxstream_common_utils",
    ],
)

cc_test(
    name = "gfxstream_features_tests",
    srcs = [
        "features_unittest.cpp",
    ],
    copts = GFXSTREAM_HOST_COPTS,
    deps = [
        ":gfxstream_host_features",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
